# swayipc-rs

async/: Cargo.toml
async/src/: common.rs  connection.rs  event.rs  socket.rs
types/src/: reply.rs
