[package]
name = "swayipc-async"
version = "2.0.3"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2021"
description = "A library for controlling sway through its IPC interface"
license = "MIT"
repository = "https://github.com/jaycefayne/swayipc-rs"
categories = ["network-programming"]
keywords = ["sway", "swaywm", "swayipc", "ipc", "async"]
readme = "README.md"

[dependencies]
swayipc-types = { version = "1", path = "../types" }
serde = "1"
serde_json = "1"
tokio = { version = "1.39.3", default-features = false, features = ["io-util", "net", "process", "time"] }
futures-lite = { version = "2.3.0", default-features = false, features = ["alloc"] }
